--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       uses: azure/CLI@v1
       with:
         inlineScript: |
-           az cdn endpoint purge --content-paths  "/*" --profile-name "patrickbrandercloudresume-dev" --name "https://patrickbrandercloudresume-dev.azureedge.net" --resource-group "CloudResume-API-Dev"
+           az cdn endpoint purge --content-paths  "/*" --profile-name "CloudResumeCDN-DEV" --name "patrickbrandercloudresume-dev" --resource-group "CloudResume-API-Dev"
 
   # Azure logout
     - name: logout
